# bitmap-render

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  index.html  lite.html  lite_diagnostics.md  serve.py  worker.js
.beads/: metadata.json
.claude/: launch.json
backend/: Cargo.toml  Makefile
backend/src/: main.rs  test_gov.rs
common/src/: lib.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs
src/: main.rs
wasm/: Cargo.toml
wasm/pkg/: wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
wasm/src/: lib.rs
