[package]
name = "bitmap-render-backend"
version = "0.1.0"
edition = "2024"
default-run = "bitmap-render-backend"

[dependencies]
common = { path = "../common" }
axum = "0.8"
brotli = "8.0"
lru = "0.16"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.46", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
